<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login_signup.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="0.dp"
        android:layout_height="50.dp"
        android:background="@color/white"
        android:layout_marginTop="28.dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backLogin"
            android:src="@drawable/outline_arrow_back_24"
            app:tint="@color/black"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/titleLayoutLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:layout_marginStart="10dp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:textSize="30sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvLoginSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/we_missed_your_login_to_continue_your_journey_with_us"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/titleLayoutLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/tvLoginSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:inputType="textEmailAddress"
            android:drawableTint="@color/grey"
            android:drawablePadding="7.dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLogin"
        android:layout_width="0.dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20.dp"
        android:layout_marginVertical="10.dp"
        app:layout_constraintTop_toBottomOf="@id/emailInputLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="18.sp"
            android:drawablePadding="7.dp"
            android:drawableTint="@color/grey"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="0.dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:gravity="end"
        android:layout_marginHorizontal="20.dp"
        android:layout_marginVertical="10.dp"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginNow"
        android:layout_width="0.dp"
        android:layout_height="wrap_content"
        android:layout_margin="20.dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_color"
        android:gravity="center"
        android:paddingVertical="10.dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20.sp"
        android:textStyle="bold"
        app:cornerRadius="15.dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPass" />

    <LinearLayout
        android:id="@+id/orDividerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="18.dp"
        app:layout_constraintTop_toBottomOf="@id/btnLoginNow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="60.dp"
            android:layout_height="2.dp"
            android:background="@color/grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_login_with"
            android:textColor="@color/black"
            android:textSize="14.sp"
            android:layout_marginHorizontal="15.dp"/>

        <View
            android:layout_width="60.dp"
            android:layout_height="2.dp"
            android:background="@color/grey"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/socialLayoutLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15.dp"
        app:layout_constraintTop_toBottomOf="@id/orDividerLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="40.dp"
            android:layout_height="40.dp"
            android:src="@drawable/google"
            android:layout_marginHorizontal="25.dp"/>

        <ImageView
            android:layout_width="40.dp"
            android:layout_height="40.dp"
            android:src="@drawable/x"
            android:layout_marginHorizontal="25.dp"/>

        <ImageView
            android:layout_width="40.dp"
            android:layout_height="40.dp"
            android:src="@drawable/fb"
            android:layout_marginHorizontal="25.dp"/>
    </LinearLayout>

    <!-- Don't have an account -->
    <LinearLayout
        android:id="@+id/goLoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20.dp"
        app:layout_constraintTop_toBottomOf="@id/socialLayoutLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doesn_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="14.sp"/>

        <TextView
            android:id="@+id/goToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_marginStart="5.dp"
            android:textSize="14.sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>